testsuite/bad/test_immutable_decorable_1/DecorableType.flux
decorable type DecorableType extends ImmutableType {}